                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * Allowed all widget constructors to take kwargs which will result
   in the setXXXX method being called.  Tuples as kwargs will result
   in *args to the setXXXX method e.g.
        p = HorizontalPanel(Size=("600px", "200%"),
                            StyleName="class-name",
                            Visible=False)
   is equivalent to:
        p = HorizontalPanel()
        p.setSize("600px", "100%")
        p.setStyleName("class-name")
        p.setVisible(False)
   This is a strategically very significant upgrade to Pyjamas Widgets:
   it dramatically simplifies the creation of applications.
   Closes #34.

 * Added compile-options --[no-]bound-methods

 * Added augassign for indexed items

 * Whitespace cleanup of addons by stefan schwarzer

 * Extended time module with gmtime/localtime/mktime and partial strftime

 * Tuples no more behave like List. No mutating methods anymore to go
   inline with the pyhton implementation.

 * huge refactoring, with incompatible changes,  see TODO

 * the translator and the linker are now split

 * python packages are now supported

 * translation (not linking) is done on a per-file basis like in
   python, no requirement for existing imports anymore

 * overrides are searched for in a namespace package e.g
   (__mozilla__), this means we can place overrides anywhere in the
   pyjs.path

 * platforms can inherit from others e.g. spidermonkey inherits from
   mozilla (multioverride - no need for runner specific special
   translation like the PyJS hack)

 * public folders are looked up in any directory where a module lives
   - this means the data_directory option is gone

 * pyjs/builtin/public now holds required bootstrap script files

 * there is a dev directory where all scripts from pyjs are now
   generated via normal setup.py and buildout
